--- a/css/page.css
+++ b/css/page.css
@@ -29,12 +29,18 @@
 
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 701px) {
     .carousel-caption h1 {
         font-size: 80px;
     }
 }
-@media only screen and (max-width: 599px) {
+
+@media only screen and (min-width: 550px) and (max-width: 700px) {
+    .carousel-caption h1 {
+        font-size: 45px;
+    }
+}
+@media only screen and (max-width: 549px) {
     .carousel-caption h1 {
         font-size: 30px;
     }
