--- a/css/page.css
+++ b/css/page.css
@@ -195,3 +195,7 @@ body {
     font-family: MyriadPro,Helvetica,Arial,sans-serif;
     font-size:15px;
 }
+
+#footer .blueBlock {
+    min-height: 116px;
+}
