--- a/css/page.css
+++ b/css/page.css
@@ -196,6 +196,14 @@ body {
     font-size:15px;
 }
 
+
+
 #footer .blueBlock {
     min-height: 116px;
+}
+
+@media only screen and (max-width: 991px) and (min-width:768px) {
+   #footer .mail {
+    font-size: 0.90em;
+}
 }
