--- a/css/page.css
+++ b/css/page.css
@@ -32,23 +32,23 @@
 
 }
 
-@media only screen and (min-width: 701px) {
+@media only screen and (min-width: 1000px) {
     .carousel-caption h1 {
         font-size: 80px;
     }
 }
 
-@media only screen and (min-width: 550px) and (max-width: 700px) {
+@media only screen and (min-width: 550px) and (max-width: 999px) {
     .carousel-caption h1 {
-        font-size: 45px;
+        font-size: 40px;
     }
 }
 @media only screen and (max-width: 549px) {
     .carousel-caption h1 {
-        font-size: 30px;
+        font-size: 28px;
     }
     .carousel-caption h2 {
-        font-size:20px;
+        font-size:18px;
     }
 }
 
@@ -134,7 +134,7 @@ ul.nav li.dropdown:hover {
 
 .sectionPicture {
     width:100%;
-    max-height:600px;
+    max-height:450px;
 }
 
 .blueBlock {
@@ -151,7 +151,9 @@ ul.nav li.dropdown:hover {
 
 .carousel-caption {
     top: 50%;
-    transform: translateY(-50%);
+    left:20%;
+    transform: translate(-20%,-50%);
+
     bottom: initial;
     text-align:left;
     text-shadow: 2px 2px black;
